<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.PhoneLoginFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_semi_bold"
        android:maxWidth="@dimen/_200sdp"
        android:paddingHorizontal="@dimen/_1sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/mobile_verification"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/headerDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMobileNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerDivider"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etlMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxStrokeColor="@color/yellow_orange"
        app:errorContentDescription="@string/app_name"
        app:errorEnabled="true"
        app:prefixText="+91"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorTextColor="@android:color/holo_red_dark"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMobileNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobile"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true"
            android:textSize="@dimen/_13ssp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShareOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:backgroundTint="@color/yellow_orange"
        android:fontFamily="@font/poppins_bold"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/send_otp"
        android:textSize="@dimen/_11ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etlMobile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUpNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_30sdp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/_11ssp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>