<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.login.LoginFragment"
    android:paddingVertical="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHelloAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_again"
            android:textColor="@color/yellow_orange"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcomeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_you_ve_n_been_missed"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@+id/tvEmailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelloAgain" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@+id/etlEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etlEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/tvPasswordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@+id/etlPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etlEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etlPassword"
            android:layout_width="0dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/cbShowPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_11ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:buttonTint="@color/light_grey"
            android:text="@string/remember_me"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvForgotPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etlPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:backgroundTint="@color/yellow_orange"
        android:fontFamily="@font/poppins_bold"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/log_in"
        android:textSize="@dimen/_11ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvDon_tHaveAnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDon_tHaveAnAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/_11ssp"
        app:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintBottom_toTopOf="@+id/tvOrContinueWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <View
        android:id="@+id/lineViewStart"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toStartOf="@+id/tvOrContinueWith"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDon_tHaveAnAccount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOrContinueWith"
        android:layout_width="0dp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:text="@string/or_continue_with"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/_11ssp"
        app:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintBottom_toBottomOf="@id/lineViewStart"
        app:layout_constraintEnd_toStartOf="@id/lineViewEnd"
        app:layout_constraintStart_toEndOf="@+id/lineViewStart"
        app:layout_constraintTop_toTopOf="@+id/lineViewStart" />

    <View
        android:id="@+id/lineViewEnd"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@id/tvOrContinueWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvOrContinueWith"
        app:layout_constraintTop_toTopOf="@+id/tvOrContinueWith" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/box_bg"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBioMetric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrContinueWith" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnBioMetric"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/box_bg"
        android:src="@drawable/ic_fingerprint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGoogle"
        app:layout_constraintTop_toBottomOf="@+id/tvOrContinueWith" />

</androidx.constraintlayout.widget.ConstraintLayout>