<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background"
    android:clipChildren="true"
    android:clipToPadding="true">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/upperDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:textAlignment="center"
            app:dividerColor="@color/yellow_orange" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/confirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:text="@string/choose_other_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/upperDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/upperDivider" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cancelButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@id/upperDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/upperDivider" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/appLogo"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upperDivider" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:ellipsize="middle"
        android:fontFamily="@font/poppins_medium"
        android:maxWidth="@dimen/_200sdp"
        android:maxLines="3"
        android:paddingHorizontal="@dimen/_5sdp"
        android:text="@string/do_you_want_to_go_with_this_email_id"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toEndOf="@id/appLogo"
        app:layout_constraintTop_toTopOf="@id/appLogo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/negativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:text="@string/no"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow_orange"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/negativeButton"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>